fix placeholder height in events

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -609,6 +609,7 @@ section#news-events{
 				@include breakpoint (medium) {
 					padding-top: 50%;
 					padding-bottom: auto;
+					margin-top: -20px;
 				}
 			}
 		}
